# media-manager

./: .gitignore  AGENTS.md  CONTEXT.md  README.md  index.html  package-lock.json  package.json
.codex/automations/: nightly-ready-for-agent-prompt.md  run-nightly-ready-for-agent.sh
docs/adr/: 0001-use-tauri-for-the-local-desktop-app.md  0002-use-sqlite-for-the-local-catalog.md  0003-rust-owns-catalog-access.md  0004-use-rusqlite-for-sqlite-access.md  0005-use-configurable-system-ffmpeg-for-v1.md  0006-store-preview-strips-as-cache-files.md  0007-use-partial-content-fingerprints-for-video-identity.md  0008-keep-v1-read-only-toward-media-files.md  0009-use-mantine-for-the-react-ui.md  0010-split-ui-and-backend-by-domain-workflow-boundaries.md
docs/agents/: domain.md
docs/plans/: split-ui-and-backend-modules.md
src/: App.module.css  App.test.tsx  App.tsx  AppArchitecture.test.ts  AppProviders.test.tsx  AppProviders.tsx  AppShell.test.tsx  main.tsx  styles.css  tauriCommands.test.ts  tauriCommands.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: catalog.rs  lib.rs  main.rs  preview_generation.rs  tooling.rs
src-tauri/src/catalog/: local_metadata.rs  metadata_suggestions.rs  migrations.rs  mod.rs  preview_strips.rs  scan_refresh.rs  scan_roots.rs  videos.rs
src-tauri/src/catalog/tests/: local_metadata.rs  metadata_suggestions.rs  migrations.rs  mod.rs  preview_strips.rs  scan_refresh.rs  videos.rs
src-tauri/src/tests/: mod.rs  tauri_commands.rs  tooling_tests.rs
src/app/: WorkspaceHeader.tsx
(+139 files in other folders)
