[package]
name = "media-manager"
version = "0.1.0"
description = "A local desktop app for managing videos."
authors = ["media-manager contributors"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "media_manager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
rusqlite = { version = "0.39.0", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dev-dependencies]
tempfile = "3.27.0"
